--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,10 @@ coverage.out
 README.html
 CHANGELOG.html
 LICENSE.html
+
+# application specific ignores and go build outputs
+volumes/*
+pb_migrations/*
+pb_data/*
+server
+*.exe
